Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40779

Setting Map's zoomLevel fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0
    • 5.1.0 , 5.4.0
    • None
    • Sailfish OS, QtLocation 5.1.0+git28-1.17.7

    Description

      It seems that setting QtLocation's Map's zoomLevel property normally, i.e.

      Map {
          zoomLevel: 18
      }
      

      doesn't work, but it does work if set in a onCompleted handler, i.e.

      Map {
          id: map
          Component.onCompleted: {
              map.zoomLevel = 18;
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            otsaloma Osmo Salomaa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes